# column-mapping

./: .databricks-resources.json  .gitignore  README.md  app.yaml  config.yaml  databricks.yml  deploy.sh  pyproject.toml
.streamlit/: config.toml
app/: app.py  app.yaml  requirements.txt
app/.streamlit/: config.toml
data/: aexeo4_positions.csv  aexeo_s_investors.csv  alpha_ledger_positions.csv  canonical_columns.csv  canonical_fields.csv  capital_track_commitments.csv  column_mappings.csv  column_rules.csv  dist_calc_distributions.csv  investran_commitments.csv  realty_ops_properties.csv  salesforce_customers.csv  shopify_orders.csv  standardization_rules.csv  summit_books_investors.csv  trade_core_transactions.csv  waterfall_distributions.csv  yardi_properties.csv
docs/: design_doc.md
notebooks/: 01_setup_data.py  01_setup_data_and_vector_search.py  02_run_column_mapping_agentic.py  02_run_mapping_agent.py
resources/: apps.yml  jobs.yml
src/column_mapping/: __init__.py  agent_tools.py  agentic_mapping.py  config.py  demo_data.py  mapping_agent.py  rules.py  vector_search.py  workspace_paths.py
tests/: conftest.py  test_agent_tools.py  test_agentic_mapping.py  test_config.py  test_mapping_agent.py  test_rules.py  test_vector_search.py
