[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "column-mapping"
version = "0.1.0"
description = "Agentic column mapping via Vector Search + rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# Minimal for running notebooks on Databricks (most dependencies are provided by the runtime).
prod = []
# Local development / CI tooling.
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/column_mapping"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

