[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "column-mapping"
version = "0.1.0"
description = "Agentic column mapping via Vector Search + rules"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Minimal for running notebooks on Databricks (most dependencies are provided by the runtime).
prod = [
    "databricks-sdk>=0.91.0",
]
# Local development / CI tooling.
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "databricks-sdk>=0.91.0",
    "streamlit>=1.54.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/column_mapping"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

